--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3",
         "doctrine/orm": "~2.2,>=2.2.3",
         "symfony/http-foundation": "~2.4",
-        "swop/filter-expression-parser": "1.0.*@dev"
+        "swop/filter-expression-parser": "~1.0"
     },
     "minimum-stability": "stable",
     "autoload": {
