--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=5.3",
         "doctrine/orm": "~2.2,>=2.2.3",
         "symfony/http-foundation": "~2.4",
+        "alphalabs/common": "~1.0",
         "swop/filter-expression-parser": "~1.0"
     },
     "minimum-stability": "stable",
